@@ -1,4 +1,3 @@
-
 #ifndef STRUCT_HPP
 #define STRUCT_HPP
 
